
   (Charles Lepple)

 * newhidups: apply partially the PSE patch set
   - nut-cvs-patch-PARSER-2005-08-24
   - nut-cvs-patch-APC-2005-08-24, minus the ups.test.panel declaration
   - nut-cvs-patch-REOPEN-2005-08-24
   - nut-cvs-patch-NUMPATH-2005-08-24

   (Peter Selinger) [Alioth Patch #302101]

 - docs/new-names.txt: completed as per the above nut-cvs-patch-APC

Mon Aug 22 09:16:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - nut-html: also install the missing nut-banner.png

Thu Aug 18 09:47:07 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 * mge-utalk 0.86:
   - improve the startup sequence not to overload old units
     (such as ES/ES+/ESV/ESV+) at startup which can cause an immediate
     shutdown. For these units, also read mge-utalk manpage for the
     Known Issues.
   - update a bit the manpage according to the above.
   - improve the reactivity when asked to stop during an init/update
     loop
   - remove the OFF status handling (doesn't point the right data).

Tue Aug 16 20:51:27 UTC 2005 / Arnaud Quette <arnaud.quette@free.fr>

 - driver.list: add Soyntec Sekury C 500 and C 800 support using
   the powermust driver (contributed by Hanno Borns)

Tue Aug 16 11:53:44 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - gamatronic: revive the sec driver as gamatronic to support officialy
   the Gamatronic models MP110/210, MS-T, MS and µPS3/1.

   (Gamatronic, Nadav Moskovitch)

 - driver.list: add old sec compatibilities with gamatronic, which
   are Clary ST-800 and various SEC protocol compatible units.

 - README for hotplug scripts updated a bit.

Thu Aug 11 09:21:41 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - genericups type 22: add Gamatronic UPSs with alarm interface

   (Gamatronic, Nadav Moskovitch) [Alioth Patch #302015]

 - Drivers now don't chroot to statepath if called for power off
   (using -k). This avoid unneeded failure to poweroff the UPS if
   /var is umounted (thanks to Gaspar Bakos).
