@@ -151,13 +151,15 @@ writable: low transfer voltage point in V
 .TP
 .B output.voltage
 .TP
-.B ups.beeper.enable
-writable. Values: yes/no. This variable determines whether the panel
-beeper is
-on or off. Note that the beeper is automatically turned back on at the
-next event (AC failure, battery test, etc). It can be turned off when
-it is already beeping. Also, the beeper can't be turned off during a
-critical event (low battery).
+.B ups.beeper.status
+writable. Values: enabled/disabled/muted. This variable controls the
+state of the panel beeper. Enabled means sound when the alarm is
+present, disabled means never sound, and muted means the sound is
+temporarily disabled until the alarm would normally stop sounding. In
+the muted state, the beeper is automatically turned back on at the
+next event (AC failure, battery test, etc). Also, the beeper can't be
+turned off during a critical event (low battery). Note that not all
+UPS models support the "disabled" state.
 .TP
 .B ups.firmware
 .TP
@@ -176,10 +178,10 @@ not supported by all hardware.
 .TP
 .B ups.test.result
 .TP
-.B ups.timer.restart
+.B ups.delay.restart
 time to restart (read only)
 .TP
-.B ups.timer.shutdown
+.B ups.delay.shutdown
 time to shutdown (read only). This is always a multiple of 60 seconds.
 .TP
 .B ups.type
@@ -195,10 +197,10 @@ connection from AC input to the battery.
 .SH COMMANDS:
 .TP 12
 .B beeper.on, beeper.off
-turn the panel beeper on or off. Note that the beeper is automatically
-turned back on at the next event (AC failure, battery test, etc). It
-can be turned off when it is already beeping. Also, the beeper can't
-be turned off during a critical event (low battery).
+turn the panel beeper on (enabled state) or off (muted state). Note
+that if the beeper is muted, it is automatically turned back on at the
+next event (AC failure, battery test, etc). Also, the beeper can't be
+turned off during a critical event (low battery).
 .TP
 .B reset.input.minmax
 reset the variables \fBinput.voltage.minimum\fP and
